--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,9 @@
         </div>
     </section>
     
-
+    <div>
+        <h2>proverka</h2>
+    </div>
     
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
