--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
     
     <section class="catalog">
         <div class="container">
-            <h2 class="title">Каталог пульсометров</h2>
+            <h2 class="title title_catalog">Каталог пульсометров</h2>
 
             <ul class="catalog__tabs">
                 <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
@@ -146,7 +146,7 @@
 
             <div class="catalog__content catalog__content_active">
                 <div class="catalog-item">
-                    <div class="catalog-item__wrapper catalog-item__wrapper_active">
+                    <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/heart_rate_monitor/1.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
@@ -415,6 +415,8 @@
 
         </div>
     </section>
+
+
 
     
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
