--- a/src/index.html
+++ b/src/index.html
@@ -104,9 +104,9 @@
                 и мы перезвоним вам в течении 10 минут
             </div>
 
-            <form class="feed-form" action="#">
+            <form id="first_form" class="feed-form" action="#">
                 <input name="name" required placeholder="Ваше имя " type="text">
-                <input name="phone" required placeholder="Ваш телефон " type="number">
+                <input name="phone" required placeholder="Ваш телефон ">
                 <input name="email" required placeholder="Ваш E-mail " type="email">
 
                 <!-- <input type="submit" value="заказать кОНСУЛЬТАЦИЮ"> -->
@@ -482,9 +482,9 @@
             <div class="modal__subtitle">Просто заполните форму заявки</div>
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25" action="#">
-                <input name="name" required placeholder="Ваше имя " type="text">
-                <input name="phone" required placeholder="Ваш телефон " type="number">
-                <input name="email" required placeholder="Ваш E-mail " type="email">
+                <input name="name" placeholder="Ваше имя " type="text">
+                <input name="phone" placeholder="Ваш телефон ">
+                <input name="email" placeholder="Ваш E-mail " type="email">
 
                 <button class="button button_modal button_form">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
@@ -496,7 +496,7 @@
             <div class="modal__descr">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" required placeholder="Ваше имя " type="text">
-                <input name="phone" required placeholder="Ваш телефон " type="number">
+                <input name="phone" required placeholder="Ваш телефон ">
                 <input name="email" required placeholder="Ваш E-mail " type="email">
 
                 <button class="button button_modal button_form">купить</button>
@@ -515,6 +515,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/min/tiny-slider.js"></script> -->
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
