--- a/src/index.html
+++ b/src/index.html
@@ -482,7 +482,7 @@
             <div class="modal__close">&times;</div>
             <div class="modal__subtitle">Просто заполните форму заявки</div>
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
-            <form class="feed-form feed-form_mt25" action="#">
+            <form id="consultation_form" class="feed-form feed-form_mt25" action="#">
                 <input name="name" placeholder="Ваше имя " type="text">
                 <input name="phone" placeholder="Ваш телефон ">
                 <input name="email" placeholder="Ваш E-mail " type="email">
@@ -495,7 +495,7 @@
             <div class="modal__close">&times;</div>
             <div class="modal__subtitle">Ваш заказ:</div>
             <div class="modal__descr">Пульсометр Polar FT1</div>
-            <form class="feed-form feed-form_mt25" action="#">
+            <form id="order_form" class="feed-form feed-form_mt25" action="#">
                 <input name="name" required placeholder="Ваше имя " type="text">
                 <input name="phone" required placeholder="Ваш телефон ">
                 <input name="email" required placeholder="Ваш E-mail " type="email">
